# type_erasure

./: CMakeLists.txt  COPYING  README.md  basic_test.cpp  copy_on_write.hpp  file_utils.hpp  hand_rolled.hpp  hand_rolled_cow.hpp  index.html  printable_types.hpp  small_buffer.hpp  test.cpp
boost_type_erasure/: CMakeLists.txt  boost_type_erasure.cpp
emtypen/: CMakeLists.txt  emptypen.cpp  emtypen.cpp  emtypen.py  headers.hpp
emtypen/python/: emtypen.py
emtypen/python/clang/: cindex.py
hand_rolled/: CMakeLists.txt  basic_test.cpp  copy_on_write.hpp  coverage.ipp  coverage_hand_rolled.cpp  coverage_hand_rolled_cow.cpp  coverage_hand_rolled_sbo.cpp  coverage_hand_rolled_sbo_cow.cpp  coverage_hand_rolled_vtable.cpp  coverage_test.cpp  cow_test.cpp  hand_rolled.hpp  hand_rolled_cow.hpp  hand_rolled_sbo.hpp  hand_rolled_sbo_cow.hpp  hand_rolled_vtable.hpp  sbo_cow_test.cpp  sbo_test.cpp  small_buffer_test.cpp  vtable_test.cpp
hand_rolled/forms/: basic.hpp  cow.hpp  sbo.hpp  sbo_cow.hpp
hand_rolled/headers/: cow.hpp  sbo.hpp  sbo_cow.hpp
libclang_generator/: CMakeLists.txt  archetypes.hpp  form.hpp  headers.hpp  libclang_generator.cpp  test_archetypes.hpp
presentation/: CMakeLists.txt  index.html  index.html.in
presentation/code_sampler/: CMakeLists.txt  code_sampler.cpp
presentation/code_samples/: CMakeLists.txt  anything.cpp  anything.hpp  compile_time_return_type.cpp  different_heirarchies.cpp  disjoint_api_archetypes.hpp  disjoint_apis.cpp  disjoint_apis.hpp  example_of_polymorphism.cpp  layout_geometry.hpp  loggable_archetype.hpp  loggable_erased_type.hpp  loggable_use.cpp  multiple_inheritance_below_base.cpp  pointer_factory.cpp  predicates.cpp  shared_pointer_factory.cpp  single_base_class_interface.cpp  type_erasure_plus_cow_wrapper.cpp  type_erasure_with_cow.cpp  wanted_interface.cpp
presentation/css/: reveal.css
